Adjust the layout.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-    <main>
-        <div class="container">
+    <main class="container">
             <div class="image-container">
                 <img src="images/image-qr-code.png" alt="QR Code">
             </div>
@@ -21,7 +20,6 @@
                 <h1>Improve your front-end skills by building projects</h1>
                 <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
             </div>
-        </div>
     </main>
 </body>
 
