Restructured the project from SCSS.

--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="stylesheet" href="styles/css/main.css">
 
     <title>Frontend Mentor | QR code component</title>
 </head>
 
 <body>
-    <main class="container">
-            <div class="image-container">
-                <img src="images/image-qr-code.png" alt="QR Code">
-            </div>
+    <main>
+        <img src="assets/images/image-qr-code.png" alt="QR Code">
 
-            <div class="text-area">
-                <h1>Improve your front-end skills by building projects</h1>
-                <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-            </div>
+        <div class="text-area">
+            <h1>Improve your front-end skills by building projects</h1>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
     </main>
 </body>
 
