--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
-    <main>
-        <img src="assets/images/image-qr-code.png" alt="QR Code">
+    <main class="qr-code">
+        <img src="assets/images/image-qr-code.png" alt="QR Code" class="qr-code__image">
 
-        <div class="text-area">
+        <div class="qr-code__text">
             <h1>Improve your front-end skills by building projects</h1>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
