--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <title>QR Code | Frontend Mentor</title>
   </head>
   <body>
-    <div id="root"></div>
+    <main class="center-grid" id="root"></main>
 
     <script type="module" src="/src/main.tsx"></script>
   </body>
